# kmscon-hangul

./: .gitignore  README.md  meson.build  meson.options
.github/workflows/: release.yml
debian/: .gitignore  changelog  control  copyright  rules
docs/man/: kmscon.1.xml.in  kmscon.conf.5.xml.in
scripts/etc/: kmscon.conf.example
scripts/systemd/: kmsconvt@.service.in
src/: im_hangul.c  kmscon_conf.c  kmscon_conf.h  kmscon_dummy.c  kmscon_im.c  kmscon_im.h  kmscon_issue.c  kmscon_issue.h  kmscon_main.c  kmscon_seat.c  kmscon_seat.h  kmscon_terminal.c  meson.build  uterm_monitor.c  uterm_monitor.h  uterm_vt.c  uterm_vt.h  uterm_vt_fake.c  uterm_vt_internal.h  uterm_vt_libseat.c  uterm_vt_real.c
src/font/: font.h  font_freetype.c  meson.build
src/render/: bbulk.c  gltex.c  gltex_atlas.vert  meson.build  text.c  text.h
src/shl/: meson.build
src/video/: drm2d_internal.h  drm2d_render.c  drm2d_video.c  drm3d_internal.h  drm3d_render.c  drm3d_video.c  drm_shared.c  drm_shared_internal.h  fbdev_internal.h  fbdev_render.c  fbdev_video.c  mod_drm3d.c  video.c  video.h  video_internal.h
subprojects/: libtsm.wrap
tests/: test_bbulk.c  test_input.c  test_output.c  test_text.c  test_vt.c
